Adicionado o endpoint para pegar as requisições de amizades
